go-filter hyperlink

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							</a>
 						</li>
 					</ul>
-					<button class="standart filter">Подбор по параметрам</button>
+					<a href="#" class="go-filter">Подбор по параметрам</a>
 					<button class="standart">Показать все</button>
 				</div>
 				<div data-tab="2">
@@ -212,7 +212,7 @@
 							</a>
 						</li>
 					</ul>
-					<button class="standart filter">Подбор по параметрам</button>
+					<a href="#" class="go-filter">Подбор по параметрам</a>
 					<button class="standart">Показать все</button>
 				</div>
 				<div data-tab="3">
