index show all items

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			</div>
 			<div class="rc">
 				<div data-tab="1">
-					<ul>
+					<ul data-show="5">
 						<li>
 							<a href="#" class="item-e">
 								<div>
@@ -175,10 +175,10 @@
 						</li>
 					</ul>
 					<a href="#" class="go-filter">Подбор по параметрам</a>
-					<button class="standart">Показать все</button>
+					<button class="standart show-all">Показать все</button>
 				</div>
 				<div data-tab="2">
-					<ul>
+					<ul data-show="2">
 						<li>
 							<a href="#" class="item-e">
 								<div>
@@ -213,7 +213,7 @@
 						</li>
 					</ul>
 					<a href="#" class="go-filter">Подбор по параметрам</a>
-					<button class="standart">Показать все</button>
+					<button class="standart show-all">Показать все</button>
 				</div>
 				<div data-tab="3">
 					<p>tab #3</p>
