product gallery fix

--- a/catalog-1.html
+++ b/catalog-1.html
@@ -126,10 +126,10 @@
 				<div class="card-e">
 					<div class="gallery">
 						<div class="main">
-							<img src="./pic/m-1-1.jpg" width="300" height="300" data-main="1" alt="">
-							<img src="./pic/m-1-2.jpg" width="300" height="300" data-main="2" alt="">
-							<img src="./pic/m-1-1.jpg" width="300" height="300" data-main="3" alt="">
-							<img src="./pic/m-1-2.jpg" width="300" height="300" data-main="4" alt="">
+							<a href="#"><img src="./pic/m-1-1.jpg" width="300" height="300" data-main="1" alt=""></a>
+							<a href="#"><img src="./pic/m-1-2.jpg" width="300" height="300" data-main="2" alt=""></a>
+							<a href="#"><img src="./pic/m-1-1.jpg" width="300" height="300" data-main="3" alt=""></a>
+							<a href="#"><img src="./pic/m-1-2.jpg" width="300" height="300" data-main="4" alt=""></a>
 						</div>
 						<ul class="preview">
 							<li data-preview="1"><img src="./pic/p-1-1.jpg" width="60" height="60" alt=""></li>
