index catalog update

--- a/index.html
+++ b/index.html
@@ -100,7 +100,151 @@
 			</div>
 			<div class="rc">
 				<div data-tab="1">
-					<ul data-show="5">
+					<ul>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Взрывозащищенные электродвигатели</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-2.png" width="198" height="144" alt="">
+								</div>
+								<p>Двигатели трехфазные асинхронные, серии АИС</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-3.png" width="162" height="100" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-2.png" width="198" height="144" alt="">
+								</div>
+								<p>Взрывозащищенные электродвигатели</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-3.png" width="162" height="100" alt="">
+								</div>
+								<p>Двигатели трехфазные асинхронные, серии АИС</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-2.png" width="198" height="144" alt="">
+								</div>
+								<p>Двигатели трехфазные асинхронные, серии АИС</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-3.png" width="162" height="100" alt="">
+								</div>
+								<p>Взрывозащищенные электродвигатели</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Взрывозащищенные электродвигатели</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-2.png" width="198" height="144" alt="">
+								</div>
+								<p>Двигатели трехфазные асинхронные, серии АИС</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-3.png" width="162" height="100" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-2.png" width="198" height="144" alt="">
+								</div>
+								<p>Взрывозащищенные электродвигатели</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-3.png" width="162" height="100" alt="">
+								</div>
+								<p>Двигатели трехфазные асинхронные, серии АИС</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-2.png" width="198" height="144" alt="">
+								</div>
+								<p>Двигатели трехфазные асинхронные, серии АИС</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-3.png" width="162" height="100" alt="">
+								</div>
+								<p>Взрывозащищенные электродвигатели</p>
+							</a>
+						</li>
 						<li>
 							<a href="#" class="item-e">
 								<div>
@@ -178,7 +322,103 @@
 					<button class="standart show-all">Показать все</button>
 				</div>
 				<div data-tab="2">
-					<ul data-show="2">
+					<ul>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-2.png" width="198" height="144" alt="">
+								</div>
+								<p>Двигатели трехфазные асинхронные, серии АИС</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-3.png" width="162" height="100" alt="">
+								</div>
+								<p>Взрывозащищенные электродвигатели</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-2.png" width="198" height="144" alt="">
+								</div>
+								<p>Двигатели трехфазные асинхронные, серии АИС</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-3.png" width="162" height="100" alt="">
+								</div>
+								<p>Взрывозащищенные электродвигатели</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-1.png" width="198" height="132" alt="">
+								</div>
+								<p>Электродвигатели для привода многоблочных насосов</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-2.png" width="198" height="144" alt="">
+								</div>
+								<p>Двигатели трехфазные асинхронные, серии АИС</p>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="item-e">
+								<div>
+									<img src="./pic/p-3.png" width="162" height="100" alt="">
+								</div>
+								<p>Взрывозащищенные электродвигатели</p>
+							</a>
+						</li>
 						<li>
 							<a href="#" class="item-e">
 								<div>
